; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/etherswitch/mtkswitch/extr_mtkswitch_mt7620.c_mtkswitch_phy_read.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/etherswitch/mtkswitch/extr_mtkswitch_mt7620.c_mtkswitch_phy_read.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mtkswitch_softc = type { i32 }

@ENXIO = common dso_local global i32 0, align 4
@MA_NOTOWNED = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i32, i32)* @mtkswitch_phy_read to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @mtkswitch_phy_read(i32 %0, i32 %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca %struct.mtkswitch_softc*, align 8
  %9 = alloca i32, align 4
  store i32 %0, i32* %5, align 4
  store i32 %1, i32* %6, align 4
  store i32 %2, i32* %7, align 4
  %10 = load i32, i32* %5, align 4
  %11 = call %struct.mtkswitch_softc* @device_get_softc(i32 %10)
  store %struct.mtkswitch_softc* %11, %struct.mtkswitch_softc** %8, align 8
  %12 = load i32, i32* %6, align 4
  %13 = icmp slt i32 %12, 0
  br i1 %13, label %23, label %14

14:                                               ; preds = %3
  %15 = load i32, i32* %6, align 4
  %16 = icmp sge i32 %15, 32
  br i1 %16, label %23, label %17

17:                                               ; preds = %14
  %18 = load i32, i32* %7, align 4
  %19 = icmp slt i32 %18, 0
  br i1 %19, label %23, label %20

20:                                               ; preds = %17
  %21 = load i32, i32* %7, align 4
  %22 = icmp sge i32 %21, 32
  br i1 %22, label %23, label %25

23:                                               ; preds = %20, %17, %14, %3
  %24 = load i32, i32* @ENXIO, align 4
  store i32 %24, i32* %4, align 4
  br label %38

25:                                               ; preds = %20
  %26 = load %struct.mtkswitch_softc*, %struct.mtkswitch_softc** %8, align 8
  %27 = load i32, i32* @MA_NOTOWNED, align 4
  %28 = call i32 @MTKSWITCH_LOCK_ASSERT(%struct.mtkswitch_softc* %26, i32 %27)
  %29 = load %struct.mtkswitch_softc*, %struct.mtkswitch_softc** %8, align 8
  %30 = call i32 @MTKSWITCH_LOCK(%struct.mtkswitch_softc* %29)
  %31 = load %struct.mtkswitch_softc*, %struct.mtkswitch_softc** %8, align 8
  %32 = load i32, i32* %6, align 4
  %33 = load i32, i32* %7, align 4
  %34 = call i32 @mtkswitch_phy_read_locked(%struct.mtkswitch_softc* %31, i32 %32, i32 %33)
  store i32 %34, i32* %9, align 4
  %35 = load %struct.mtkswitch_softc*, %struct.mtkswitch_softc** %8, align 8
  %36 = call i32 @MTKSWITCH_UNLOCK(%struct.mtkswitch_softc* %35)
  %37 = load i32, i32* %9, align 4
  store i32 %37, i32* %4, align 4
  br label %38

38:                                               ; preds = %25, %23
  %39 = load i32, i32* %4, align 4
  ret i32 %39
}

declare dso_local %struct.mtkswitch_softc* @device_get_softc(i32) #1

declare dso_local i32 @MTKSWITCH_LOCK_ASSERT(%struct.mtkswitch_softc*, i32) #1

declare dso_local i32 @MTKSWITCH_LOCK(%struct.mtkswitch_softc*) #1

declare dso_local i32 @mtkswitch_phy_read_locked(%struct.mtkswitch_softc*, i32, i32) #1

declare dso_local i32 @MTKSWITCH_UNLOCK(%struct.mtkswitch_softc*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
